[gd_scene load_steps=16 format=3 uid="uid://b6kgh572n5vm7"]

[ext_resource type="Script" path="res://scripts/interfaces/level-up.gd" id="1_28nma"]
[ext_resource type="FontFile" uid="uid://dfuox7hi86nmr" path="res://Daydream.ttf" id="2_0os8t"]
[ext_resource type="Texture2D" uid="uid://blh6lim2k2ox4" path="res://images/ui/png/button-normal-cube.png" id="3_xfd8n"]
[ext_resource type="Texture2D" uid="uid://drrfgpesiwd58" path="res://images/ui/png/button-click-cube.png" id="4_2vdqm"]
[ext_resource type="Texture2D" uid="uid://cfivhkk7840eq" path="res://images/ui/png/button-hover-cube.png" id="5_ay5e1"]
[ext_resource type="Texture2D" uid="uid://ltpt3bypw08a" path="res://images/ui/png/heart.png" id="6_41lel"]
[ext_resource type="Texture2D" uid="uid://bv823wutjjlow" path="res://images/ui/png/stamina.png" id="7_53m1h"]
[ext_resource type="Texture2D" uid="uid://dr6wuihch1uc3" path="res://images/ui/png/strength.png" id="8_atdjq"]

[sub_resource type="LabelSettings" id="LabelSettings_fxs14"]
line_spacing = 10.0
font = ExtResource("2_0os8t")
font_size = 96
outline_size = 15
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_qbbm3"]
font = ExtResource("2_0os8t")
font_size = 64
outline_size = 15
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_x1rrs"]
font = ExtResource("2_0os8t")
font_size = 50
outline_size = 15
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_gmd5h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Level-Up/Level-up Text Container:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}

[sub_resource type="Animation" id="Animation_k6spx"]
resource_name = "enter_UI"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Level-Up/Level-up Text Container:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.241667, 0.4, 0.566667, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1.2, 1.2), Vector2(0.9, 0.9), Vector2(1.05, 1.05), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Choose Upgrade/Choose Upgrade Container:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.23333, 1.475, 1.63333, 1.8, 1.98333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1.2, 1.2), Vector2(0.9, 0.9), Vector2(1.05, 1.05), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Health/Health Text Container:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.23333, 1.475, 1.63333, 1.8, 1.98333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1.2, 1.2), Vector2(0.9, 0.9), Vector2(1.05, 1.05), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Health/Health Texture Container:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.23333, 1.5, 1.63333, 1.8, 1.98333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(2.2, 2.2), Vector2(1.9, 1.9), Vector2(2.05, 2.05), Vector2(2, 2)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Health/Health Button Container:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1.23333, 1.5, 1.63333, 1.8, 1.98333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(2.2, 2.2), Vector2(1.9, 1.9), Vector2(2.05, 2.05), Vector2(2, 2)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Stamina/Stamina Text Container:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(1.23333, 1.475, 1.63333, 1.8, 1.98333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1.2, 1.2), Vector2(0.9, 0.9), Vector2(1.05, 1.05), Vector2(1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Stamina/Stamina Texture Container:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(1.23333, 1.5, 1.63333, 1.8, 1.98333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(2.2, 2.2), Vector2(1.9, 1.9), Vector2(2.05, 2.05), Vector2(2, 2)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Stamina/Stamina Button Container:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(1.23333, 1.5, 1.63333, 1.8, 1.98333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(2.2, 2.2), Vector2(1.9, 1.9), Vector2(2.05, 2.05), Vector2(2, 2)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Power/Power Text Container:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(1.23333, 1.475, 1.63333, 1.8, 1.98333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1.2, 1.2), Vector2(0.9, 0.9), Vector2(1.05, 1.05), Vector2(1, 1)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Power/Power Texture Container:scale")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(1.23333, 1.5, 1.63333, 1.8, 1.98333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(2.2, 2.2), Vector2(1.9, 1.9), Vector2(2.05, 2.05), Vector2(2, 2)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Power/Power Button Container:scale")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(1.23333, 1.5, 1.63333, 1.8, 1.98333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(2.2, 2.2), Vector2(1.9, 1.9), Vector2(2.05, 2.05), Vector2(2, 2)]
}

[sub_resource type="Animation" id="Animation_wnw5l"]
resource_name = "stay_UI"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Level-Up/Level-up Text Container:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Choose Upgrade/Choose Upgrade Container:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Health/Health Text Container:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Health/Health Texture Container:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 2)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Health/Health Button Container:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 2)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Stamina/Stamina Text Container:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Stamina/Stamina Texture Container:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 2)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Stamina/Stamina Button Container:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 2)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Power/Power Text Container:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Power/Power Texture Container:scale")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 2)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Power/Power Button Container:scale")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_krb7x"]
_data = {
"RESET": SubResource("Animation_gmd5h"),
"enter_UI": SubResource("Animation_k6spx"),
"stay_UI": SubResource("Animation_wnw5l")
}

[node name="Level-up" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_28nma")

[node name="Level-Up" type="Control" parent="."]
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="Level-up Text Container" type="AspectRatioContainer" parent="Level-Up"]
layout_mode = 0
offset_left = 600.0
offset_top = 250.0
offset_right = 1320.0
offset_bottom = 376.0
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(360, 0)

[node name="Level-up Text" type="Label" parent="Level-Up/Level-up Text Container"]
z_index = 3
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Level Up!"
label_settings = SubResource("LabelSettings_fxs14")

[node name="Choose Upgrade" type="Control" parent="."]
anchors_preset = 0
offset_top = -77.0
offset_right = 40.0
offset_bottom = -37.0

[node name="Choose Upgrade Container" type="AspectRatioContainer" parent="Choose Upgrade"]
layout_mode = 0
offset_left = 231.0
offset_top = 754.0
offset_right = 1689.0
offset_bottom = 880.0
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(729, 0)

[node name="Choose Upgrade Text" type="Label" parent="Choose Upgrade/Choose Upgrade Container"]
z_index = 3
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "choose one to upgrade"
label_settings = SubResource("LabelSettings_qbbm3")

[node name="Health" type="Control" parent="."]
anchors_preset = 0
offset_top = -77.0
offset_right = 40.0
offset_bottom = -37.0

[node name="Health Text Container" type="AspectRatioContainer" parent="Health"]
layout_mode = 0
offset_left = 206.0
offset_top = 899.0
offset_right = 511.0
offset_bottom = 966.0
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(152.5, 0)

[node name="Health Text" type="Label" parent="Health/Health Text Container"]
z_index = 3
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Health"
label_settings = SubResource("LabelSettings_x1rrs")

[node name="Health Texture Container" type="AspectRatioContainer" parent="Health"]
z_index = 3
layout_mode = 0
offset_left = 276.0
offset_top = 969.0
offset_right = 789.0
offset_bottom = 1103.0
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(75, 0)

[node name="Health Texture" type="TextureRect" parent="Health/Health Texture Container"]
layout_mode = 2
texture = ExtResource("6_41lel")

[node name="Health Button Container" type="AspectRatioContainer" parent="Health"]
layout_mode = 0
offset_left = 276.0
offset_top = 968.0
offset_right = 789.0
offset_bottom = 1102.0
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(75, 0)

[node name="Health Button" type="TextureButton" parent="Health/Health Button Container"]
z_index = 2
layout_mode = 2
disabled = true
texture_normal = ExtResource("3_xfd8n")
texture_pressed = ExtResource("4_2vdqm")
texture_hover = ExtResource("5_ay5e1")

[node name="Stamina" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -2.0
offset_top = -77.0
offset_right = 38.0
offset_bottom = -37.0

[node name="Stamina Text Container" type="AspectRatioContainer" parent="Stamina"]
layout_mode = 0
offset_left = 800.0
offset_top = 899.0
offset_right = 1166.0
offset_bottom = 966.0
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(183, 0)

[node name="Stamina Text" type="Label" parent="Stamina/Stamina Text Container"]
z_index = 3
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "stamina"
label_settings = SubResource("LabelSettings_x1rrs")

[node name="Stamina Texture Container" type="AspectRatioContainer" parent="Stamina"]
z_index = 3
layout_mode = 0
offset_left = 901.0
offset_top = 966.0
offset_right = 1414.0
offset_bottom = 1100.0
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(75, 0)

[node name="Stamina Texture" type="TextureRect" parent="Stamina/Stamina Texture Container"]
layout_mode = 2
texture = ExtResource("7_53m1h")

[node name="Stamina Button Container" type="AspectRatioContainer" parent="Stamina"]
layout_mode = 0
offset_left = 905.0
offset_top = 968.0
offset_right = 1418.0
offset_bottom = 1102.0
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(75, 0)

[node name="Stamina Button" type="TextureButton" parent="Stamina/Stamina Button Container"]
z_index = 2
layout_mode = 2
disabled = true
texture_normal = ExtResource("3_xfd8n")
texture_pressed = ExtResource("4_2vdqm")
texture_hover = ExtResource("5_ay5e1")

[node name="Power" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 588.0
offset_top = -77.0
offset_right = 628.0
offset_bottom = -37.0

[node name="Power Text Container" type="AspectRatioContainer" parent="Power"]
layout_mode = 0
offset_left = 800.0
offset_top = 899.0
offset_right = 1166.0
offset_bottom = 966.0
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(188, 0)

[node name="Power Text" type="Label" parent="Power/Power Text Container"]
z_index = 3
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "power"
label_settings = SubResource("LabelSettings_x1rrs")

[node name="Power Texture Container" type="AspectRatioContainer" parent="Power"]
z_index = 3
layout_mode = 0
offset_left = 903.0
offset_top = 966.0
offset_right = 1416.0
offset_bottom = 1100.0
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(75, 0)

[node name="Power Texture" type="TextureRect" parent="Power/Power Texture Container"]
layout_mode = 2
texture = ExtResource("8_atdjq")

[node name="Power Button Container" type="AspectRatioContainer" parent="Power"]
layout_mode = 0
offset_left = 908.0
offset_top = 968.0
offset_right = 1421.0
offset_bottom = 1102.0
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(75, 0)

[node name="Power Button" type="TextureButton" parent="Power/Power Button Container"]
z_index = 2
layout_mode = 2
disabled = true
texture_normal = ExtResource("3_xfd8n")
texture_pressed = ExtResource("4_2vdqm")
texture_hover = ExtResource("5_ay5e1")

[node name="Animator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_krb7x")
}

[connection signal="button_down" from="Health/Health Button Container/Health Button" to="." method="_on_health_button_button_down"]
[connection signal="button_down" from="Stamina/Stamina Button Container/Stamina Button" to="." method="_on_stamina_button_button_down"]
[connection signal="button_down" from="Power/Power Button Container/Power Button" to="." method="_on_power_button_button_down"]
[connection signal="animation_changed" from="Animator" to="." method="_on_animator_animation_changed"]
[connection signal="current_animation_changed" from="Animator" to="." method="_on_animator_current_animation_changed"]
